# jdw-billboarding-lib

./: README.md  pyproject.toml
jdw_billboarding/: __init__.py
jdw_billboarding/lib/: billboard_classes.py  billboard_construction.py  billboard_osc_conversion.py  billboard_running.py  element_osc_conversion.py  external_data_classes.py  filtering.py  jdw_osc_utils.py  note_utils.py  nrt_scoring.py  parsing.py
